# zarro-boogs-tools

./: .gitignore  setup.cfg
.github/workflows/: tox.yml
src/zarro_boogs_tools/: __init__.py  __main__.py  cli.py  inference.py  list.py  package.py  portage.py
src/zarro_boogs_tools/pkgcore/: __init__.py  profile.py  restriction.py
src/zbt/: __main__.py  package.py
tests/: __init__.py  test_package.py
tests/ebuild-repos/etr-simplified/app-doc/doxygen/: doxygen-1.9.1.ebuild  doxygen-1.9.3.ebuild
tests/ebuild-repos/etr-simplified/dev-libs/libltdl/: libltdl-2.4.6.ebuild
tests/ebuild-repos/etr-simplified/dev-util/pkgconf/: pkgconf-1.7.4-r1.ebuild  pkgconf-9999.ebuild
tests/ebuild-repos/etr-simplified/games-action/extreme-tuxracer/: extreme-tuxracer-0.8.1_p1.ebuild
tests/ebuild-repos/etr-simplified/media-libs/libogg/: libogg-1.3.5.ebuild
tests/ebuild-repos/etr-simplified/media-libs/libsfml/: libsfml-2.5.1.ebuild
tests/ebuild-repos/etr-simplified/media-sound/gsm/: gsm-1.0.13-r1.ebuild
tests/ebuild-repos/etr-simplified/media-sound/modplugtools/: modplugtools-0.5.3.ebuild
tests/ebuild-repos/etr-simplified/media-sound/sox/: sox-14.4.2_p20210509.ebuild
tests/ebuild-repos/etr-simplified/profiles/: repo_name
tests/ebuild-repos/java/dev-java/ant-core/: ant-core-1.10.9-r3.ebuild  ant-core-1.10.9.ebuild
tests/ebuild-repos/java/dev-java/antlr/: antlr-4.5.3-r1.ebuild  antlr-4.9.3.ebuild
tests/ebuild-repos/java/dev-java/c3p0/: c3p0-0.9.5.5-r1.ebuild
tests/ebuild-repos/java/dev-java/openjdk/: openjdk-11.0.14_p9-r1.ebuild  openjdk-17.0.2_p8.ebuild  openjdk-8.322_p06.ebuild
tests/ebuild-repos/java/dev-java/openjdk-bin/: openjdk-bin-11.0.14_p9-r1.ebuild  openjdk-bin-17.0.2_p8.ebuild  openjdk-bin-8.322_p06.ebuild
tests/ebuild-repos/java/profiles/base/: make.defaults  use.mask
tests/ebuild-repos/java/sec-policy/selinux-java/: selinux-java-2.20210203-r1.ebuild  selinux-java-2.20220106-r1.ebuild
tests/ebuild-repos/single-pkg-multi-vers/profiles/: repo_name
tests/ebuild-repos/use-restrictions/profiles/: categories  repo_name  use.desc
tests/scripts/: pip-vcs-install-as-needed.sh
tests/zarro_boogs_tools/: __init__.py  test_inference.py  test_list.py  test_package.py  test_portage.py
tests/zarro_boogs_tools/pkgcore/: __init__.py  test_profile.py  test_restriction.py
tests/zarro_boogs_tools/unittest/: __init__.py
(+31 files in other folders)
