[metadata]
name = zarro-boogs-tools
description = Facade for Gentoo keywording tools that allows them to be used without Bugzilla
url = https://github.com/Leo3418/zarro-boogs-tools
version = attr: zbt.__version__
author = Yuan Liao
author_email = liaoyuan@gmail.com
license = GPLv3+

[options]
packages = find:
package_dir =
    = src
install_requires =
    nattka
    pkgcheck
    pkgcore
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zbt = zbt.__main__:main_wrapper

[tox:tox]
envlist = py
isolated_build = True

[testenv]
commands_pre =
    # Upgrade NATTkA to a version not uploaded to PyPI
    pip install git+https://github.com/mgorny/nattka.git@v0.2.19
commands =
    python -m unittest discover []
